apps/valentines/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valentines
  labels:
    app: valentines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valentines
  template:
    metadata:
      labels:
        app: valentines
    spec:
      containers:
        - name: valentines
          image: ghcr.io/tonybutt/valentines:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
