apps/valentines/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valentines
  labels:
    app: valentines
spec:
  selector:
    app: valentines
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
