apps/valentines/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: valentines
  namespace: valentines
spec:
  parentRefs:
    - name: cloudflare-tunnel
      namespace: default
      sectionName: http
  hostnames:
    - valentines.abutt.dev
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
